fixing up the sliding menu on smaller screens

--- a/themes/hugo-ror/static/css/hugo-ror.css
+++ b/themes/hugo-ror/static/css/hugo-ror.css
@@ -1862,7 +1862,7 @@ a.btn.disabled, fieldset:disabled a.btn {
 }.fade:not(.show) {
     opacity: 0;
 }
-.collapse:not(.show) {
+.collapse:not(.show):not(.navbar-collapse) {
     display: none;
 }
 .collapsing {
@@ -10151,6 +10151,7 @@ textarea.form-control:active, textarea.form-control:focus {
     outline: 0;
     cursor: pointer;
     vertical-align: middle;
+    z-index:1033;
 }
 .navbar .navbar-toggler.navbar-toggler-left {
     position: relative;
